<resources>
    <string name="app_name">OfficeDetective</string>
    <string name="title_activity_pager" translatable="false">CrimeActivity</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved?</string>
    <string name="crimes_title">Crimes</string>
    <string name="crimes_list_title">CrimesList</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="base_disalog_time">Get Time</string>
    <string name="base_disalog_date">Get Date</string>
    <string name="base_disalog_title">Choice parameter:  </string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle">If you see something, say something.</string>
    <string name="delete_crime">Delete</string>
    <string name="take">Take!</string>
    <string name="crimes_camera_title" translatable="false">CrimesCamera</string>

    <string name="crimes_suspect_text">Choose Suspect</string>
    <string name="crimes_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s! The crime was descovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">There is no suspect.</string>
    <string name="crime_report_suspect">The suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="call_suspect">Call suspect</string>
    <string name="suspect">Suspect: </string>
    <string name="date">Date</string>
</resources>
